--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,10 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/destylize.js"]
+      "js": [
+        "src/char_map.js",
+        "src/destylize.js"
+      ]
     }
   ]
 }
