--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,8 @@
   "description": "Converts unicode styled 'fonts' and other forms of expression to accessable and readable plain text",
 
   "icons": {
+    "16": "icons/destylize-16.png",
+    "32": "icons/destylize-32.png",
     "48": "icons/destylize-48.png",
     "96": "icons/destylize-96.png"
   },
