--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,7 @@
       "matches": ["<all_urls>"],
       "js": [
         "src/char_map.js",
+        "src/scanner.js",
         "src/destylize.js"
       ]
     }
