Add background script to set icon

--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,12 @@
     "storage"
   ],
 
+  "background": {
+    "scripts": [
+      "src/background.js"
+    ]
+  },
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
